--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "auth",
   "version": "0.0.0",
   "dependencies": {
+  	"jquery": "~2.2.2",
     "angular-animate": "~1.4.2",
     "angular-cookies": "~1.4.2",
     "angular-touch": "~1.4.2",
@@ -14,7 +15,8 @@
     "angular-toastr": "~1.5.0",
     "moment": "~2.10.6",
     "animate.css": "~3.4.0",
-    "angular": "~1.4.2"
+    "angular": "~1.4.2",
+    "angular-mocks": "~1.4.10"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.2"
