--- a/.project
+++ b/.project
@@ -4,6 +4,8 @@
   <comment>NO_M2ECLIPSE_SUPPORT: Project files created with the maven-eclipse-plugin are not supported in M2Eclipse.</comment>
   <projects/>
   <buildSpec>
+    <buildCommand>
+    </buildCommand>
   </buildSpec>
   <natures>
   </natures>
