--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "auth",
   "version": "0.0.0",
   "dependencies": {
-  	"jquery": "~2.2.2",
+    "jquery": "~2.2.2",
     "angular-animate": "~1.4.2",
     "angular-cookies": "~1.4.2",
     "angular-touch": "~1.4.2",
@@ -16,7 +16,8 @@
     "moment": "~2.10.6",
     "animate.css": "~3.4.0",
     "angular": "~1.4.2",
-    "angular-mocks": "~1.4.10"
+    "angular-mocks": "~1.4.10",
+    "angular-translate": "^2.11.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.2"
